tests/compile-fail/bad_return.ails
module demo.bad_return

func bad
    input a: i32
    output bool
    effect pure
begin
    return a
end
